# OpenTemple.Native

./: .clang-format  .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  OpenTemple.Native.nuspec  README.md  SpicyTemple.Native.nuspec  azure-pipelines.yml  qt5.natvis
.github/workflows/: ci.yml  nightly_installer.yml
cmake/: libjpegturbo.cmake  qmlnet.cmake  qtplugins.cmake  sdl.cmake  soloud.cmake  zlib-ng.cmake
ffmpeg_bink/: BinkVideoItem.cpp  BinkVideoItem.h  CMakeLists.txt  VideoAudioSource.cpp  VideoAudioSource.h  VideoFrame.h  VideoMaterial.cpp  VideoMaterial.h  videoplayer.cpp  videoplayer.h  videoplayer_test.cpp
game/: CMakeLists.txt  GameViewItem.cpp  GameViewItem.h  GameViews.cpp  GameViews.h  SoLoudDynamicSource.cpp  SoLoudDynamicSource.h  SoLoudDynamicSource_wrapper.cpp  com_helper.h  completion_source.cpp  completion_source.h  dynamic_interop.cpp  events.h  game_folders_windows.cpp  gl_headers.h  install_dir_finder_win.cpp  qml_registration.cpp  shell.cpp  static_plugins.cpp  string_wrapper.cpp  string_wrapper.h  translator.cpp  translator.h  ui.cpp  ui.h  vector_wrapper.cpp  windows_jumplist.cpp
game/interop/: string_interop.cpp  string_interop.h
game/logging/: Logger.cpp  Logger.h  Logger_wrapper.cpp
game/rendering/: FontFile.h  HangingIndentObject.h  MemoryFontStream.h  RunRenderSettings.cpp  RunRenderSettings.h  StyleConversion.h  TextEngine.h  TextEngine_wrapper.cpp  TextLayout.cpp  TextLayout.h  TextLayout_wrapper.cpp  TextRenderer.h  TextRendererStyle.cpp  TextRendererStyle.h
game/rendering/drawing/: DrawingEngine.cpp  DrawingEngine.h  DrawingEngine_wrapper.cpp  HangingIndentObject.h  MemoryFontLoader.cpp  MemoryFontStream.cpp  Style.h  TextFormatKey.h  TextLayout.cpp  TextLayout.h  TextLayout_wrapper.cpp  TextRenderer.cpp  TextRenderer.h
game/rendering/text/: MemoryFontLoader.cpp  MemoryFontLoader.h  TextEngine.cpp  TextEngine_wrapper.cpp  TextRenderer.cpp  TextRenderer.h  TextRendererStyle.h
game/win32/: clipboard.cpp  game_folders_windows.cpp  install_dir_finder_win.cpp  shell.cpp  string_interop.cpp  windows_headers.h  windows_jumplist.cpp  windows_wrapper.cpp
managed/: .gitignore  CMakeLists.txt  localbuild.cmd  managed.sln
managed/BuildTask/: BuildTask.csproj  BuildToolsCli.cs  ProxiesGenerator.cs  localbuild.cmd
managed/BuildTask/CodeGen/: EventGenerator.cs  GeneratorSupport.cs  MethodGenerator.cs  PropertyGenerator.cs  ProxiesGenerator.cs
managed/BuildTask/Introspection/: EnumInfo.cs  MethodInfo.cs  PropInfo.cs  QmlInfo.cs  TypeInfo.cs  TypeLibrary.cs  TypeRef.cs
managed/Interop/: CursorLoader.cs  Inflate.cs  Interop.csproj  JpegCompressor.cs  JpegDecompressor.cs  JpegPixelFormat.cs  JumpListBuilder.cs  NativeCompletionSource.cs  NativeDelegate.cs  NativeLogger.cs  NativePlatform.cs  OpenTempleLib.cs  QmlList.cs  QmlTypeRegistryAttribute.cs  QtBuiltInTypeInterop.cs  QtInterop.cs  SDL2.cs  SoLoudDynamicSource.cs  StbNative.cs  Translator.cs  soloud.cs  soloud.generated.cs
managed/Interop/Drawing/: NativeBackgroundAndBorderStyle.cs  NativeDrawingEngine.cs  NativeHitTestRect.cs  NativeLineMetrics.cs  NativeMetrics.cs  NativeParagraphStyle.cs  NativeTextLayout.cs  NativeTextStyle.cs  NativeTextStyleProperty.cs
managed/Interop/QmlNet/: NetVariantType.cs  QCoreApplication.cs  QGuiApplication.cs  QQmlApplicationEngine.cs  Qml.cs
managed/Interop/QmlNet/Internal/: DefaultCallbacks.cs  Interop.cs
managed/Interop/QmlNet/Internal/CodeGen/: CodeGen.Methods.cs  CodeGen.cs
managed/Interop/QmlNet/Internal/Qml/: NetVariant.cs
managed/Interop/QmlNet/Internal/Types/: NetPropertyInfo.cs  NetReference.cs
managed/Interop/Text/: NativeBackgroundAndBorderStyle.cs  NativeLineMetrics.cs  NativeMetrics.cs  NativeParagraphStyle.cs  NativeTextEngine.cs  NativeTextLayout.cs  NativeTextStyle.cs  NativeTextStyleProperty.cs
nightly_installer/: CMakeLists.txt  OpenTemplePrerelease.cer  app.manifest  app.rc  certificate.h  main.cpp  os.h  resource.h
qmlintrospection/: CMakeLists.txt  c_interface.cpp  enuminfo.h  methodinfo.h  propinfo.h  qmlinfo.cpp  qmlinfo.h  typeinfo.h  typelibrary.cpp  typelibrary.h  typeref.h
qtinterop/: CMakeLists.txt  ManagedObject.cpp  ManagedObject.h  builtintype_interop.cpp  managed_delegate.cpp  managed_delegate.h  qobject_interop.cpp  string_interop.cpp  string_interop.h
src/: GameViewItem.cpp  GameViewItem.h  GameViews.cpp  GameViews.h  completion_source.cpp  completion_source.h  cursor.cpp  dynamic_interop.cpp  game_folders_windows.cpp  install_dir_finder_win.cpp  install_dir_selector_win.cpp  libjpeg_turbo_wrapper.cpp  qobject_interop.cpp  qobject_interop.h  rcc.cpp  rcc.h  rcc_wrapper.cpp  shell.cpp  soloud.def  stb_image_wrapper.cpp  ui.cpp  ui.h  utils.h  vector_wrapper.cpp  windows_headers.h  windows_jumplist.cpp  windows_wrapper.cpp
thirdparty_wrappers/: CMakeLists.txt  libjpeg_turbo_wrapper.cpp  soloud_c.cpp  stb_image_wrapper.cpp  zlib_ng_wrapper.cpp
